[tool.poetry]
name = "os-hound"
version = "0.1.0"
description = ""
authors = ["Tony <tonytimoshe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
scapy = "^2.5.0"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oshound = 'os_hound.main:main'
